# survivalGuideToStaticTyping

./: .gitignore  README.md  presentation.odp  pyproject.toml
src/: self_type.py  structural_typing.py  typeguards.py
src/best_practices/: declarations.py
src/generics/: py_311.py  py_312.py
