[project]
name = "Survival Guide to Static Typing"
dependencies = [
    "black",
    "isort",
    "mypy"
]

[tool.mypy]
python_version = "3.12"
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_untyped_decorators = false
warn_redundant_casts = true
warn_unreachable = true
warn_incomplete_stub = true
ignore_missing_imports = true
